provision/k8s/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: thangle-student
  labels:
    app: student
spec:
  containers:
    - image: letanthang/nc_student
      name: gocontainer
      ports:
        - containerPort: 9090
          name: web
      resources:
        requests:
          memory: "60Mi"
          cpu: "50m"
        limits:
          memory: "75Mi"
          cpu: "75m"
