provision/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: thangle-svc
spec:
  selector:
    app: thangle
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 9090
  type: NodePort
