provision/k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
spec:
  rules:
    - http:
        paths:
          - path: /api/student/
            backend:
              serviceName: thangle-svc
              servicePort: 9090
